tests/parser/define.5.bad.error
error: Malformed function definition
  --> test:4:9
   |
 4 |  (define (0.5 x y) 2)
   |           ^^^ expected symbol
